webpack config, tooling changes

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "myrecipe project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,13 @@
   },
   "homepage": "https://github.com/mateoRc/myRecipe#readme",
   "devDependencies": {
-    "webpack": "^4.42.1"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "babel-polyfill": "^6.26.0"
   }
 }
